added Cursor tracking service, and the canvas has a manager(incomplete)

--- a/front-end/drawing-app/src/app/canvas/canvas.component.html
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.html
@@ -1,1 +1,7 @@
-<p>canvas works!</p>
+<header>
+  <button (click) = "CanvasManager.addShape('square')" >▄</button>
+  <button>▲</button>
+</header>
+<body>
+  <div id="container"></div>
+</body>
