shape creation is foken done at the price of click to select elements eb2a e3ml double click 3shan tselect el elements b2a

--- a/front-end/drawing-app/src/app/canvas/canvas.component.html
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.html
@@ -9,12 +9,12 @@
   </div>
 
   <div class="shapes">
-  <button title="create square" (click) = "CanvasManager.addShape('square')" >◼</button>
-  <button title="create triangle">▲</button>
-  <button title="create circle">⬤</button>
-  <button title="create ellipse">⬬</button>
-  <button title="create rectangle">▬</button>
-  <button title="create line sigmant">┃</button>
+  <button title="create square" (click) = "CanvasManager.createShape('square')" >◼</button>
+  <button title="create triangle" (click) = "CanvasManager.createShape('triangle')">▲</button>
+  <button title="create circle" (click) = "CanvasManager.createShape('circle')">⬤</button>
+  <button title="create ellipse" (click) = "CanvasManager.createShape('ellipse')">⬬</button>
+  <button title="create rectangle" (click) = "CanvasManager.createShape('rectangle')">▬</button>
+  <button title="create line sigmant" (click) = "CanvasManager.createShape('line')">┃</button>
 </div>
 
 
