3mlt el 5ra 3la dma8y kol el requests m3ada el resize wl move

--- a/front-end/drawing-app/src/app/canvas/canvas.component.html
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.html
@@ -1,6 +1,6 @@
 <header>
   <div class="operations">
-    <button title="copy">⧉</button>
+    <button title="copy"(click) = "CanvasManager.copyShape()">⧉</button>
     <button title="delete" (click) = "CanvasManager.deleteShape()" >🗑</button>
     <button title="save" id="save"><a href="http://localhost:8080/file/save" download>🖬</a></button>
     <button title="load" id="load">load</button>
