--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -7,23 +7,64 @@ header{
   align-items: center;
   padding: 10px 25px;
   height: fit-content;
-  background-color:#b0cdd3b6;
+  background-color:#f1f1f1b6;
   z-index: 1;
-}
+  border-bottom:solid rgb(235, 235, 235);
+  box-shadow: 0 12px 16px 0 rgba(211, 211, 211, 0.24),0 17px 50px 0 rgba(122, 122, 122, 0.19);
 
+}
+button{
+  font-family:  Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  transition-duration: 0.4s;
+  border-radius: 50%;
+  border:solid rgb(218, 218, 218);
+}
+button:hover{
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+
+}
 .shapes{
-  display: flex;
-  width: 150px;
+  display:flex;
+  width: 50%;
   flex-wrap: wrap;
   padding: 0;
+}
+.shapes button{
+  width: 45px;
+  height: 45px;
+  margin: 2px;
+  font-size: 27.5px;
+  background-color: rgba(238, 238, 238, 0.651);
+  border-radius: 50%;
+  padding: 30px;
+
+}
+.shapes button:hover{
+  background-color: rgb(75, 75, 75);
 }
 
 .operations{
   display: flex;
   flex-wrap: wrap;
   padding: 0;
-  width: 105px;
+  width: 20%;
 }
+.operations button{
+  padding: 5px;
+  width: 45px;
+  height: 45px;
+  margin: 2px;
+  font-size: 27.5px;
+  border-radius: 50%;
+  background-color: rgb(255, 242, 225);
+}
+
+.operations button:hover{
+  background-color: rgb(143, 132, 117);
+}
+
+
+
 
 .colors{
   display: flex;
@@ -33,9 +74,23 @@ header{
   width:220px;
   border: solid;
   border-width: 5px;
-  border-color: black;
-  background-color: azure;
+  border:solid rgb(194, 194, 194);
+  background-color: rgb(235, 235, 235);
 }
+
+.colors button{
+  width: 40px;
+  height: 40px;
+  margin:2px;
+  border-width: 2px;
+}
+
+.colors button:hover{
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.452),0 17px 50px 0 rgba(0, 0, 0, 0.514);
+
+}
+
+
 
 section{
   z-index: 0;
@@ -51,41 +106,6 @@ form{
   top: 25%;
   left: calc(50%-200px);
   background-color: darkgrey;
-}
-
-.operations button{
-  font-size: 20px;
-  padding: 5px;
-}
-.colors button{
-  width: 40px;
-  height: 40px;
-  margin:2px;
-  border-width: 2px;
-  border-color: black;
-}
-.colors button:hover{
-  border: solid;
-}
-.shapes button{
-  width: 45px;
-  height: 45px;
-  margin: 2px;
-  font-size: 27.5px;
-  background-color: red;
-}
-.shapes button:hover{
-  background-color: green;
-}
-.operations button{
-  width: 45px;
-  height: 45px;
-  margin: 2px;
-  font-size: 27.5px;
-  background-color: burlywood;
-}
-.operations button:hover{
-  background-color: blueviolet;
 }
 a{
   text-decoration: none;
