--- a/front-end/drawing-app/src/app/canvas/canvas.component.html
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.html
@@ -9,12 +9,12 @@
   </div>
 
   <div class="shapes">
-  <button title="create square" (click) = "CanvasManager.createShape('square')" >◼</button>
-  <button title="create triangle" (click) = "CanvasManager.createShape('triangle')">▲</button>
+  <button title="create square" (click) = "CanvasManager.createShape('square')" >⬜</button>
+  <button title="create triangle" (click) = "CanvasManager.createShape('triangle')">△</button>
   <button title="create circle" (click) = "CanvasManager.createShape('circle')">⬤</button>
-  <button title="create ellipse" (click) = "CanvasManager.createShape('ellipse')">⬬</button>
-  <button title="create rectangle" (click) = "CanvasManager.createShape('rectangle')">▬</button>
-  <button title="create line" (click) = "CanvasManager.createShape('line')">┃</button>
+  <button title="create ellipse" (click) = "CanvasManager.createShape('ellipse')">⬯</button>
+  <button title="create rectangle" (click) = "CanvasManager.createShape('rectangle')">█</button>
+  <button title="create line" (click) = "CanvasManager.createShape('line')">╱</button>
 </div>
 
 
