--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -1,6 +1,6 @@
 header{
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   margin: 0;
   position: sticky;
   top: 0;
@@ -19,13 +19,15 @@ button{
   border-radius: 50%;
   border:solid rgb(218, 218, 218);
 }
+.button-text{
+  text-align: center;
+}
 button:hover{
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 
 }
 .shapes{
   display:flex;
-  width: 50%;
   flex-wrap: wrap;
   padding: 0;
 }
@@ -51,9 +53,9 @@ button:hover{
 }
 .operations button{
   padding: 5px;
-  width: 45px;
-  height: 45px;
-  margin: 2px;
+  width: 70px;
+  height: 70px;
+  margin-top: 10px;
   font-size: 27.5px;
   border-radius: 50%;
   background-color: rgb(255, 242, 225);
