--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -56,6 +56,7 @@ button:hover{
   width: 70px;
   height: 70px;
   margin-top: 10px;
+  margin-right: 5px;
   font-size: 27.5px;
   border-radius: 50%;
   background-color: rgb(255, 242, 225);
