--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -5,7 +5,6 @@ header{
   position: sticky;
   top: 0;
   align-items: center;
-  padding: 10px 25px;
   height: fit-content;
   background-color:#f1f1f1b6;
   z-index: 1;
@@ -14,12 +13,14 @@ header{
 
 }
 button{
+
   font-family:  Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
   transition-duration: 0.4s;
   border-radius: 50%;
-  border:solid rgb(218, 218, 218);
+  border:solid rgba(218, 218, 218, 0);
 }
 button:hover{
+  color: whitesmoke;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 
 }
@@ -30,24 +31,24 @@ button:hover{
   padding: 0;
 }
 .shapes button{
-  width: 45px;
-  height: 45px;
-  margin: 2px;
+  width: 70px;
+  height: 70px;
+  margin: 5px;
   font-size: 27.5px;
-  background-color: rgb(238, 238, 238);
+  background-color: rgb(245, 245, 245);
   border-radius: 50%;
-  padding: 30px;
-
+  padding:5px;
 }
 .shapes button:hover{
-  background-color: rgb(75, 75, 75);
+  background-color: rgb(121, 135, 138);
 }
 
 .operations{
   display: flex;
   flex-wrap: wrap;
   padding: 0;
-  width: 20%;
+  width: 40%;
+
 }
 .operations button{
   padding: 5px;
@@ -55,16 +56,13 @@ button:hover{
   height: 70px;
   margin-top: 10px;
   margin-right: 5px;
-  width: 70px;
-  height: 70px;
-  margin-top: 10px;
   font-size: 27.5px;
   border-radius: 50%;
-  background-color: rgb(255, 242, 225);
+  background-color: rgb(245, 245, 245);
 }
 
 .operations button:hover{
-  background-color: rgb(143, 132, 117);
+  background-color: rgb(143, 130, 112);
 }
 
 
@@ -73,18 +71,15 @@ button:hover{
 .colors{
   display: flex;
   flex-wrap: wrap;
-  padding: 0;
+  padding-left: 3%;
   height: fit-content;
-  width:220px;
-  border: solid;
-  border-width: 5px;
-  border:solid rgb(194, 194, 194);
-  background-color: rgb(235, 235, 235);
+  width:30%;
+  border-left:solid rgba(187, 187, 187, 0.342);
 }
 
 .colors button{
-  width: 40px;
-  height: 40px;
+  width: 70px;
+  height: 70px;
   margin:2px;
   border-width: 2px;
 }
