upload nearly complete

--- a/front-end/drawing-app/src/app/canvas/canvas.component.html
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.html
@@ -38,7 +38,7 @@
 
 
   <div>
-  <input type="file"  name="file" accept="text/xml , application/JSON" (change)="selectFile($event)" />
+  <input type="file"  name="file" accept="text/xml , application/JSON" (change)="CanvasManager.Uploadfile($event)" />
 
     </div>
   <div class="download">
