--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -97,23 +97,62 @@ section{
   padding: 0;
 }
 
-form{
-  display: none;
-  z-index: 3;
-  position: absolute;
-  width: 400px;
-  top: 25%;
-  left: calc(50%-200px);
-  background-color: darkgrey;
-}
 a{
   text-decoration: none;
   color: black;
 }
 .uplo{
   display: none;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.746);
-   z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 200%;
+  background-color: rgba(0, 0, 0, 0.85);
+  color: black;
+   z-index: 3;
+
+}
+.download{
+  width:600px;
+  height: 300px;
+  position: absolute;
+  background-color: gainsboro;
+  top: 200px;
+  left:650px;
+  z-index: 6;
+}
+.download button{
+  width:100px;
+  height: 50px;
+  position: relative;
+  top: 100px;
+  left: 65px;
+  margin: 20px;
+  height: 100px;
+  width: 200px;
+  font-size:  28px;;
+  background-color: rgb(216, 176, 176);
+
+}
+input{
+  width:100px;
+  height: 50px;
+  position: relative;
+  top: 100px;
+  left: 65px;
+  margin: 20px;
+  width: 280px;
+  height: 27.4px;
+  font-size:  18px;;
+  background-color: rgb(233, 57, 57);
+}
+.input{
+  width:600px;
+  height: 300px;
+  position: absolute;
+  background-color: gainsboro;
+  top: 200px;
+  left:650px;
+  z-index: 6;
 }
