kosom el konva v2

--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -121,7 +121,6 @@ a{
   top: 200px;
   left:650px;
   z-index: 6;
-  transition: 0.5s;
 }
 .download button{
   width:100px;
@@ -134,7 +133,7 @@ a{
   width: 200px;
   font-size:  28px;;
   background-color: rgb(216, 176, 176);
-  margin-top: 0px;;
+
 }
 input{
   width:100px;
@@ -156,7 +155,6 @@ input{
   top: 200px;
   left:650px;
   z-index: 6;
-  transition: 0.5s;
 }
 .out{
   position: relative;
@@ -168,24 +166,19 @@ input{
   color:black;
   transition: 0.5s;
 }
-
 .out:hover{
   color:red;
 }
-
-.outt{
-  position: relative ;
-  top: 0px;
-  left: 0px;
-  width: 25px;
-  height: 35px;
-  font-size: 25px;
-  background-color: rgb(77, 166, 243);
+.out2{
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 0;
+  font-size: 15px;
+  background-color: aliceblue;
   color:black;
   transition: 0.5s;
-  margin-bottom: 0px;;
 }
-
-.outt:hover{
+.out2:hover{
   color:red;
 }
