--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -12,6 +12,9 @@ header{
   box-shadow: 0 12px 16px 0 rgba(211, 211, 211, 0.24),0 17px 50px 0 rgba(122, 122, 122, 0.19);
 
 }
+body{
+  background-color: grey;
+}
 button{
 
   font-family:  Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
