--- a/front-end/drawing-app/src/app/canvas/canvas.component.html
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.html
@@ -35,7 +35,7 @@
 <section>
   <div id="container"></div>
 </section>
-
+<body>
 
   <div  [style.display]="load ? 'block' : 'none'" class="input">
   <button (click)="state(2)" class="out">🞮</button>
@@ -51,3 +51,4 @@
 <div  [style.display]="isSpecial ? 'block' : 'none'" class="uplo">
 
 </div>
+</body>
