replaced white color with grey color

--- a/front-end/drawing-app/src/app/canvas/canvas.component.html
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.html
@@ -25,7 +25,7 @@
 <button (click) ="CanvasManager.colorShape('blue')" style="background-color:blue ;"></button>
 <button (click) ="CanvasManager.colorShape('yellow')" style="background-color:yellow ;"></button>
 <button (click) ="CanvasManager.colorShape('black')" style="background-color:black ;"></button>
-<button (click) ="CanvasManager.colorShape('white')" style="background-color:white ;"></button>
+<button (click) ="CanvasManager.colorShape('grey')" style="background-color:grey ;"></button>
 <button (click) ="CanvasManager.colorShape('brown')" style="background-color:brown ;"></button>
 <button (click) ="CanvasManager.colorShape('cyan')" style="background-color:cyan ;"></button>
 <button (click) ="CanvasManager.colorShape('purple')" style="background-color:purple ;"></button>
