white color comeback, background suits the whitecolor

--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -15,6 +15,9 @@ header{
 body{
   background-color: grey;
 }
+#container{
+  background-color: rgb(214, 214, 214);
+}
 button{
 
   font-family:  Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
