--- a/front-end/drawing-app/src/app/canvas/canvas.component.css
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.css
@@ -133,21 +133,28 @@ a :hover{
 }
 
 .downloadbut{
+  font-family:  Calibri, 'Gill Sans', 'Gill Sans MT', 'Trebuchet MS', sans-serif;
+  transition-duration: 0.4s;
+  border-radius: 50%;
+  border:solid rgba(218, 218, 218, 0);
   width:150px;
-  height: 100px;
+  height: 50px;
+  display: inline-block;
   position: relative;
   top: 100px;
-  left: 65px;
+  left: 120px;
   margin: 20px;
-  font-size: 20px;;
-  font-family: Calibri light;
+  text-align: center;
+  justify-content: center;
+  font-size: 24px;;
   border-radius: 16px;
   color:rgb(85, 2, 2);
   justify-content: space-evenly;
-  background-color: rgb(245, 245, 245);
+  background-color: rgb(182, 90, 177);
 }
 .downloadbut:hover{
-  background-color: #966e6e;
+  color: whitesmoke;
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 input{
   width:100px;
