--- a/front-end/drawing-app/src/app/canvas/canvas.component.html
+++ b/front-end/drawing-app/src/app/canvas/canvas.component.html
@@ -38,13 +38,14 @@
 <body>
 
   <div  [style.display]="load ? 'block' : 'none'" class="input">
+    <button (click)="state(2)" class="out2">🞮</button>
   <input type="file" (click)="state(1)" name="file" accept="text/xml , application/JSON" (change)="CanvasManager.Uploadfile($event)"  />
 </div>
 
   <div class = "input" [style.display]="save ? 'block' : 'none'">
   <button (click)="state(2)" class="out2">🞮</button>
- <a  (click)="state(2)"  href="http://localhost:8080/file/save/Xml"  download>as .xml</a>
- <a  (click)="state(2)"  href="http://localhost:8080/file/save/JSON"  download>as .json</a>
+ <a class = "downloadbut" (click)="state(2)"  href="http://localhost:8080/file/save/Xml"  download>as .xml</a>
+ <a  class = "downloadbut" (click)="state(2)"  href="http://localhost:8080/file/save/JSON"  download>as .json</a>
   </div>
 
 <div  [style.display]="isSpecial ? 'block' : 'none'" class="uplo">
